# wdms-xp-calibration

./: .gitignore  README.md  pyproject.toml  requirements.txt
outputs/: PROVENANCE.md
outputs/audit/: adv_magmatch_multiseed.json  bp_extension.json  catalog_analysis.json  catalog_fractions.json  clean_coverage_seeds.json  conformal_certificate.json  conformal_fdr.json  groundtruth.json  groundtruth_followup.json  severity_to_local.json  uv_distance_matched.json
outputs/p0/: evidence_gate.json  evidence_gate_sev002.json  evidence_gate_sev005.json  g1_honest_multiseed.json  g1_precise_bootstrap.json  g1_precise_compare.json  g1_precise_snr.json  g1_realistic.json  g1_realistic_snr.json  g1_realistic_sweep.json  gonogo.json  local_axis_auc.json  npe_sbc.json  npe_sbc_realmodel.json  npe_sbc_realmodel_controls.json  npe_sbc_robust.json  ppc_diagnostic.json  realmodel_fidelity.json  sbc_honest.json  snr_sweep.json  sweep.json
scripts/: adv_magmatch_multiseed.py  adv_survivor3b.py  analyze_catalog.py  analyze_groundtruth.py  bp_extension.py  build_groundtruth.py  catalog_fractions.py  conformal_certificate.py  conformal_fdr.py  evidence_gate.py  g1_honest_multiseed.py  g1_precise_aggregate.py  g1_precise_worker.py  g1_realistic.py  g1_realistic_snr.py  g1_realistic_sweep.py  make_figures.py  make_money_figure.py  npe_sbc.py  npe_sbc_realmodel.py  npe_sbc_realmodel_controls.py  p0_gonogo.py  p0_snr_sweep.py  ppc_diagnostic.py  run_local_axis_auc.py  sbc_honest.py  severity_to_local.py
src/sbiwdms/: __init__.py  audit.py
tests/: test_core.py
